docs/api/qiskit/0.29/qiskit.circuit.library.IntegerComparator.mdx
---
title: IntegerComparator (v0.29)
description: API reference for qiskit.circuit.library.IntegerComparator in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.IntegerComparator
---

# IntegerComparator

<Class id="qiskit.circuit.library.IntegerComparator" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/arithmetic/integer_comparator.py" signature="IntegerComparator(num_state_qubits=None, value=None, geq=True, name='cmp')" modifiers="class">
  Bases: `qiskit.circuit.library.blueprintcircuit.BlueprintCircuit`

  Integer Comparator.

  Operator compares basis states $|i\rangle_n$ against a classically given integer $L$ of fixed value and flips a target qubit if $i \geq L$ (or $<$ depending on the parameter `geq`):

$$
|i\rangle_n |0\rangle \mapsto |i\rangle_n |i \geq L\rangle
$$

  This operation is based on two’s complement implementation of binary subtraction but only uses carry bits and no actual result bits. If the most significant carry bit (the results bit) is 1, the $\geq$ condition is `True` otherwise it is `False`.

  Create a new fixed value comparator circuit.

  **Parameters**

  *   **num\_state\_qubits** (`Optional`\[`int`]) – Number of state qubits. If this is set it will determine the number of qubits required for the circuit.
  *   **value** (`Optional`\[`int`]) – The fixed value to compare with.
  *   **geq** (`bool`) – If True, evaluate a `>=` condition, else `<`.
  *   **name** (`str`) – Name of the circuit.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.IntegerComparator.ancillas">
    Returns a list of ancilla bits in the order that the registers were added.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.IntegerComparator.calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.IntegerComparator.clbits">
    Returns a list of classical bits in the order that the registers were added.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.IntegerComparator.data" />

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.IntegerComparator.extension_lib" attributeValue="'include &#x22;qelib1.inc&#x22;;'" />

  ### geq

  <Attribute id="qiskit.circuit.library.IntegerComparator.geq">
    Return whether the comparator compares greater or less equal.

    **Return type**

    `bool`

    **Returns**

    True, if the comparator compares `>=`, False if `<`.
  </Attribute>

  ### global\_phase

  <Attribute id="qiskit.circuit.library.IntegerComparator.global_phase">
    Return the global phase of the circuit in radians.
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.IntegerComparator.header" attributeValue="'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.IntegerComparator.instances" attributeValue="16" />

  ### metadata

  <Attribute id="qiskit.circuit.library.IntegerComparator.metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.
  </Attribute>

  ### num\_ancilla\_qubits

  <Attribute id="qiskit.circuit.library.IntegerComparator.num_ancilla_qubits">
    Deprecated. Use num\_ancillas instead.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.IntegerComparator.num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.IntegerComparator.num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.IntegerComparator.num_parameters">
    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.IntegerComparator.num_qubits">
    Return number of qubits.
  </Attribute>

  ### num\_state\_qubits

  <Attribute id="qiskit.circuit.library.IntegerComparator.num_state_qubits">
    The number of qubits encoding the state for the comparison.

    **Return type**

    `int`

    **Returns**

    The number of state qubits.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.IntegerComparator.parameters">
    **Return type**

    `ParameterView`
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.IntegerComparator.prefix" attributeValue="'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.IntegerComparator.qregs">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.IntegerComparator.qubits">
    Returns a list of quantum bits in the order that the registers were added.
  </Attribute>

  ### value

  <Attribute id="qiskit.circuit.library.IntegerComparator.value">
    The value to compare the qubit register to.

    **Return type**

    `int`

    **Returns**

    The value against which the value of the qubit register is compared.
  </Attribute>
</Class>

